# anifiller

./: README.md  pyproject.toml
src/anifiller/: __init__.py  cli.py  constants.py  exceptions.py  file_operations.py  output_formatters.py  scraper.py  utils.py
src/anifiller/commands/: __init__.py  list_command.py  mover_command.py
