[project]
name = "anifiller"
dynamic = ["version"]
description = "A simple CLI tool to check which anime episodes are canon, mixed canon/filler, or filler by scraping animefillerlist.com"
readme = "README.md"
authors = [
    { name = "bex", email = "30572280+JoshPaulie@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "types-requests>=2.32.4.20250611",
]

[project.scripts]
anifiller = "anifiller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["hatch>=1.14.1", "mypy>=1.17.1", "ruff>=0.12.7"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D212",
    "D107",
    "D100",
    "S603",
    "S311",
    "T201",
    "TD",
    "S607",
    "D200",
    "D400",
    "D415",
    "D401",
    "TRY301",
]

fixable = ["ALL"]

[tool.ruff]
line-length = 120

[tool.hatch.version]
path = "src/anifiller/__init__.py"
